--- a/Apunts.tex
+++ b/Apunts.tex
@@ -101,7 +101,7 @@
 \DeclareMathOperator{\Dist}{d}
 \DeclareMathOperator{\B}{B}
 \DeclareMathOperator{\bola}{B}
-\DeclareMathOperator{\R}{R}
+%\DeclareMathOperator{\R}{R}
 \DeclareMathOperator{\omicron}{o}
 \DeclareMathOperator{\Omicron}{O}
 \DeclareMathOperator{\rang}{rang}
