--- a/NovoTeX/BodyMatter/1r/AlgebraLineal.tex
+++ b/NovoTeX/BodyMatter/1r/AlgebraLineal.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Àlgebra lineal}
+\assignatura{Àlgebra lineal}
 \chapter{Matrius}
 \section{Matrius i operacions}
 	\subsection{Cossos}
