--- a/NovoTeX/BodyMatter/1r/Fonaments.tex
+++ b/NovoTeX/BodyMatter/1r/Fonaments.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Fonaments de les matemàtiques}
+\assignatura{Fonaments de les matemàtiques}
 \chapter{Lògica matemàtica}
 \section{Els fonaments}
 	\subsection{Processos fonamentals de les matemàtiques}
