--- a/NovoTeX/BodyMatter/1r/Intro.tex
+++ b/NovoTeX/BodyMatter/1r/Intro.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Coses per fer}
+\assignatura{Coses per fer}
 \chapter{Aviat}
 	Podeu trobar la versió actualitzada d'aquest pdf seguint aquest \href{https://claudilleyda.github.io}{link}.
 	%	\subsection{Ignorar}
