--- a/NovoTeX/BodyMatter/2n/AnalisiMatematic.tex
+++ b/NovoTeX/BodyMatter/2n/AnalisiMatematic.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Anàlisi matemàtica}
+\assignatura{Anàlisi matemàtica}
 \chapter{Sèries}
 \section{Sèries numèriques}
 	\subsection{Convergència d'una sèrie numèrica}
