--- a/NovoTeX/BodyMatter/2n/EstructuresAlgebraiques.tex
+++ b/NovoTeX/BodyMatter/2n/EstructuresAlgebraiques.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Estructures algebraiques}
+\assignatura{Estructures algebraiques}
 \chapter{Teoria de grups}
 \section{Grups}
 	\subsection{Propietats bàsiques dels grups}
