--- a/NovoTeX/BodyMatter/3r/Complexa.tex
+++ b/NovoTeX/BodyMatter/3r/Complexa.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Anàlisi complexa i de Fourier}
+\assignatura{Anàlisi complexa i de Fourier}
 \chapter{Els nombres complexos}
 \section{Estructura de \ensuremath{\mathbb{C}}}
 	\subsection{Cos de nombres complexos}
