--- a/NovoTeX/BodyMatter/3r/EDOS2.tex
+++ b/NovoTeX/BodyMatter/3r/EDOS2.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Equacions diferencials ordinàries \rom{2}}
+\assignatura{Equacions diferencials ordinàries \rom{2}}
 \begin{comment}
 %	\emph{\hypersetup{urlcolor=black}\href{https://www.urbandictionary.com/define.php?term=wtf}{wtf} is this assignatura}
 \section{Òrbites d'una equació diferencial}
