--- a/NovoTeX/BodyMatter/3r/Topologia.tex
+++ b/NovoTeX/BodyMatter/3r/Topologia.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Topologia}
+\assignatura{Topologia}
 \chapter{L'espai topològic}
 \section{Espais mètrics}
 	\subsection{Boles i oberts}
