--- a/NovoTeX/BodyMatter/2n/CDVO.tex
+++ b/NovoTeX/BodyMatter/2n/CDVO.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Càlcul en diverses variables i optimització}
+\assignatura{Càlcul en diverses variables i optimització}
 \chapter{Càlcul diferencial}
 \section{Arcs i conjunts connexos}
 	\subsection{Arcs en múltiples variables}
