--- a/NovoTeX/BodyMatter/3r/EDOS1.tex
+++ b/NovoTeX/BodyMatter/3r/EDOS1.tex
@@ -1,7 +1,7 @@
 \documentclass[../../Main.tex]{subfiles}
 
 \begin{document}
-\part{Equacions diferencials ordinàries \rom{1}}
+\assignatura{Equacions diferencials ordinàries \rom{1}}
 \chapter{Equacions diferencials de primer ordre en una variable}
 \section{Espai de funcions contínues i acotades}
 	\subsection{L'espai de funcions contínues i acotades és complet}
