Canviada la font a NovoTeX. Ara és concrete (amb beton), i la font per les matemàtiques és eulervm

--- a/NovoTeX/FrontMatter/Portada/portada.tex
+++ b/NovoTeX/FrontMatter/Portada/portada.tex
@@ -6,6 +6,7 @@
 \usepackage{tkz-euclide}
 \usetkzobj{all}
 \usetikzlibrary{decorations.text}
+%\usepackage{beton}
 \usepackage{anyfontsize}
 \usepackage[scaled=0.92]{helvet}
 \usepackage{graphicx}
