Desfet el canvi a concrete. Reincorporat nag sense l'opció orthodox

--- a/NovoTeX/Main.tex
+++ b/NovoTeX/Main.tex
@@ -1,4 +1,4 @@
-%\RequirePackage[l2tabu, orthodox]{nag}
+\RequirePackage[l2tabu]{nag}
 \documentclass[10pt, a4paper, openright]{memoir}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -12,10 +12,10 @@
 %\usepackage[framemethod=TikZ]{mdframed}
 \usepackage[sorting=none, backend=biber, refsection=part]{biblatex} % Bibliografies
 \usepackage{hyperref}
-\usepackage{beton}
-\usepackage{eulervm}
+%\usepackage{beton}
+%\usepackage{eulervm}
 
-\renewcommand{\bfdefault}{sbc}
+%\renewcommand{\bfdefault}{sbc}
 
 \def\echo#1{\immediate\write18{echo "#1" >&2}}
 
@@ -247,7 +247,7 @@
 
  %%%%% ESTIL DE PÀGINA %%%%%
 \pagestyle{ruled} % Estil de pàgina
-\setlength{\headheight}{12.1638pt} %TODO Investigar. Crec que només és per la taula de continguts
+\setlength{\headheight}{13pt} %TODO Investigar. Crec que només és per la taula de continguts
 
 
  %%%%% TAULA DE CONTINGUTS %%%%%
