--- a/NovoTeX/Main.tex
+++ b/NovoTeX/Main.tex
@@ -420,12 +420,13 @@
 }
 \newcommand{\tercer}{
 	\book{Tercer curs}
+	\subfile{BodyMatter/3r/Galois.tex}
 	\subfile{BodyMatter/3r/Topologia.tex}
 	\subfile{BodyMatter/3r/EDOS1.tex}
 	\subfile{BodyMatter/3r/Complexa.tex}
 	\subfile{BodyMatter/3r/GeoDiferencial.tex}
 	\subfile{BodyMatter/3r/EDOS2.tex}
-%	\subfile{BodyMatter/3r/Apendix3x.tex} % Formes diferencials (?)
+%	\subfile{BodyMatter/3r/Apendix3r.tex} % Formes diferencials (?)
 }
 
 
