--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -2318,6 +2318,7 @@
 \section{Cossos finits}
 	\subsection{Propietats bàsiques dels cossos finits}
 	\begin{proposition}
+		\label{prop:un subcòs és un espai vectorial}
 		Siguin \(\mathbb{K}\) i \(\mathbb{E}\) dos cossos tals que \(\mathbb{K}\subseteq\mathbb{E}\). Aleshores \(\mathbb{E}\) és un \(\mathbb{K}\)-espai vectorial.
 		\begin{proof}
 			%TODO - Fer àlgebra lineal primer.
