Afegit teoria a Galois fins a extensions de cossos

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -142,6 +142,7 @@
 \DeclareMathOperator{\I}{\rom{1}}
 \DeclareMathOperator{\II}{\rom{2}}
 \DeclareMathOperator{\divergencia}{div}
+\DeclareMathOperator{\Irr}{Irr}
 
 \DeclareMathOperator*{\suport}{Supp}
 
