--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -2205,7 +2205,8 @@
 		Aquesta definició té sentit per la proposició \myref{prop:l'anell de polinomis és un anell}.
 	\end{definition}
 	\begin{observation}
-		\(D\subseteq D[x]\).
+		\label{obs:un anell està contingut en el seu anell de polinomis}
+		\(R\subseteq R[x]\).
 	\end{observation}
 	\begin{theorem}[Teorema de la base de Hilbert]
 		Sigui \(R\) un anell Noetherià. Aleshores \(R[x]\) és un anell Noetherià.
