Afegida teoria al principi de Teoria de Galois

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -187,6 +187,17 @@
 \newcommand{\matrius}{M}
 \newcommand{\basecanonica}{\base{C}}
 \newcommand{\Lie}{\mathcal{L}}
+\newcommand{\ev}{\mathrm{ev}}
+
+\newcommand{\RR}{\field{R}}
+\newcommand{\QQ}{\field{Q}}
+\newcommand{\CC}{\field{C}}
+\newcommand{\NN}{\field{N}}
+\newcommand{\ZZ}{\field{Z}}
+\newcommand{\HH}{\field{H}}
+\newcommand{\KK}{\field{K}}
+\newcommand{\FF}{\field{F}}
+\newcommand{\EE}{\field{E}}
 
 \makeatletter
 	\def\prodesc{\@ifnextchar[{\@prodescwith}{\@prodescwithout}}
